--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.6",
     "console-log-level": "^1.4.1",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
